# atomize-habit-tracker

./: .gitignore  Dockerfile
app/: app.json  eas.json  package-lock.json  package.json
app/app/: _layout.tsx  about.tsx  appearance.tsx  backup.tsx  modal.tsx  reminders.tsx
app/app/(tabs)/: _layout.tsx  analytics.tsx  habits.tsx  index.tsx  profile.tsx
app/components/: error-boundary.tsx  habit-card.tsx  habit-heatmap.tsx  level-progress.tsx  progress-ring.tsx  stat-card.tsx  status-toast.tsx  weekly-chart.tsx
app/components/ui/: icon-symbol.tsx
app/constants/: theme.ts  verses.ts
app/context/: habit-context.tsx  theme-context.tsx
app/hooks/: use-color-scheme.ts  use-color-scheme.web.ts
app/services/: api.ts  notifications.ts
assembly/: analytics.asm  habit_score.asm  streak_calculator.asm
backend/: Cargo.toml  db.json
backend/src/: assembly.rs  db.rs  main.rs  models.rs  routes.rs
database/: schema.sql
